syntax = "proto3";

option csharp_namespace = "TicketSystem.Api.Protos";

package issue;

service IssueService {
  rpc CreateIssue (CreateIssueRequest) returns (CreateIssueResponse);
  rpc GetIssue (GetIssueRequest) returns (GetIssueResponse);
  rpc ListIssues (ListIssuesRequest) returns (ListIssuesResponse);
  rpc UpdateIssue (UpdateIssueRequest) returns (UpdateIssueResponse);
  rpc AssignIssueToUser (AssignIssueToUserRequest) returns (AssignIssueToUserResponse);
  rpc AssignIssueToTeam (AssignIssueToTeamRequest) returns (AssignIssueToTeamResponse);
  rpc UpdateIssueStatus (UpdateIssueStatusRequest) returns (UpdateIssueStatusResponse);
  rpc GetIssuesByUser (GetIssuesByUserRequest) returns (GetIssuesByUserResponse);
  rpc GetIssuesByTeam (GetIssuesByTeamRequest) returns (GetIssuesByTeamResponse);
  rpc DeleteIssue (DeleteIssueRequest) returns (DeleteIssueResponse);
}

message CreateIssueRequest {
  string title = 1;
  string description = 2;
  int32 priority = 3;
  string due_date = 4;
}

message CreateIssueResponse {
  string issue_id = 1;
}

message GetIssueRequest {
  string issue_id = 1;
}

message GetIssueResponse {
  IssueMessage issue = 1;
}

message ListIssuesRequest {
}

message ListIssuesResponse {
  repeated IssueMessage issues = 1;
}

message UpdateIssueRequest {
  string issue_id = 1;
  string title = 2;
  string description = 3;
  int32 priority = 4;
  string due_date = 5;
}

message UpdateIssueResponse {
}

message AssignIssueToUserRequest {
  string issue_id = 1;
  string user_id = 2;
}

message AssignIssueToUserResponse {
}

message AssignIssueToTeamRequest {
  string issue_id = 1;
  string team_id = 2;
}

message AssignIssueToTeamResponse {
}

message UpdateIssueStatusRequest {
  string issue_id = 1;
  int32 status = 2;
}

message UpdateIssueStatusResponse {
}

message GetIssuesByUserRequest {
  string user_id = 1;
}

message GetIssuesByUserResponse {
  repeated IssueMessage issues = 1;
}

message GetIssuesByTeamRequest {
  string team_id = 1;
}

message GetIssuesByTeamResponse {
  repeated IssueMessage issues = 1;
}

message DeleteIssueRequest {
  string issue_id = 1;
}

message DeleteIssueResponse {
}

message IssueMessage {
  string id = 1;
  string title = 2;
  string description = 3;
  int32 status = 4;
  int32 priority = 5;
  string assigned_user_id = 6;
  string assigned_team_id = 7;
  string created_date = 8;
  string due_date = 9;
  string resolved_date = 10;
  string last_modified_date = 11;
}
